log
Thu 05 Oct 2023 12:50:25 AM UTC: 
 tests:  0|5
total_score: 0/70
284e30a
Thu 05 Oct 2023 08:27:04 AM UTC: 
 sudoku.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|5
total_score: 0/70
bc65df8
Thu 05 Oct 2023 08:27:59 AM UTC: 
 sudoku.c | 27 ++++++++++++++++++++++++++-
 1 file changed, 26 insertions(+), 1 deletion(-)
 tests:  0|0
40c8709
Thu 05 Oct 2023 08:28:25 AM UTC: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccPJEidH.o: in function `createList':
list.c:(.text+0x10): multiple definition of `createList'; /tmp/cc540fUX.o:test.c:(.text+0x180): first defined here
collect2: error: ld returned 1 exit status
Compilation failed
ae2ec72
Thu 05 Oct 2023 08:31:25 AM UTC: 
 sudoku.c | 40 +++++++++++++++-------------------------
 1 file changed, 15 insertions(+), 25 deletions(-)
test.c: In function ‘adj_test1’:
test.c:62:17: error: initialization of ‘List *’ from incompatible pointer type ‘Node **’ [-Werror=incompatible-pointer-types]
   62 |     List* adj = get_adj_nodes(initial);
      |                 ^~~~~~~~~~~~~
test.c:95:9: error: assignment to ‘List *’ from incompatible pointer type ‘Node **’ [-Werror=incompatible-pointer-types]
   95 |     adj = get_adj_nodes(initial);
      |         ^
test.c: In function ‘test_mod_adj’:
test.c:155:17: error: initialization of ‘List *’ from incompatible pointer type ‘Node **’ [-Werror=incompatible-pointer-types]
  155 |     List* adj = get_adj_nodes(initial);
      |                 ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
772a712
Thu 05 Oct 2023 08:31:51 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:82:12: error: returning ‘Node **’ from a function with incompatible return type ‘List *’ [-Werror=incompatible-pointer-types]
   82 |     return adj_nodes;
      |            ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1565058
Thu 05 Oct 2023 08:36:15 AM UTC: 
 sudoku.c | 31 ++++++++++++++++++++++---------
 1 file changed, 22 insertions(+), 9 deletions(-)
 tests:  0|0
ccbc2dd
Thu 05 Oct 2023 08:40:36 AM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
e8c66cb
